--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,5 @@ db.sqlite3
 .idea/
 .idea/*.*
 
-## Django App ##
-./locallibrary/catalog/migrations/
-./locallibrary/catalog/migrations/*.*
+## Django Migrations ##
+**/migrations/*
